crates/ars-components/src/date_time/calendar/snapshots/ars_components__date_time__calendar__tests__cell_selected.snap
---
source: crates/ars-components/src/date_time/calendar/tests.rs
expression: snapshot_attrs(&api.cell_attrs(&chosen))
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "cell",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "calendar",
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "true",
            ),
        ),
        (
            Role,
            String(
                "gridcell",
            ),
        ),
    ],
    styles: [],
}
