crates/ars-components/src/date_time/calendar/snapshots/ars_components__date_time__calendar__tests__cell_trigger_focused.snap
---
source: crates/ars-components/src/date_time/calendar/tests.rs
expression: snapshot_attrs(&trigger)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "cell-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "calendar",
            ),
        ),
        (
            Data(
                "ars-today",
            ),
            Bool(
                true,
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "January 15, 2024, Monday",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
