crates/ars-components/src/date_time/calendar/snapshots/ars_components__date_time__calendar__tests__grid_group_multi_month.snap
---
source: crates/ars-components/src/date_time/calendar/tests.rs
expression: snapshot_attrs(&api.grid_group_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "grid-group",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "calendar",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "January 2024 – February 2024",
            ),
        ),
        (
            Id,
            String(
                "cal-grid-group",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [],
}
