crates/ars-components/src/date_time/calendar/snapshots/ars_components__date_time__calendar__tests__grid_single_select.snap
---
source: crates/ars-components/src/date_time/calendar/tests.rs
expression: snapshot_attrs(&api.grid_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "grid",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "calendar",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "cal-heading",
            ),
        ),
        (
            Id,
            String(
                "cal-grid",
            ),
        ),
        (
            Role,
            String(
                "grid",
            ),
        ),
    ],
    styles: [],
}
